# MedSync

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  Medsync.md  README.md  docker-compose.yml
.serena/: project.yml
client/: index.html  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx
client/src/components/: ClinicalTimeline.jsx  PipelineStatus.jsx  TriageCard.jsx  VitalsChart.jsx
client/src/hooks/: usePatients.js  useWebSocket.js
client/src/pages/: PatientDetail.jsx  PatientRegistry.jsx  (+2 more)
server/: .env.example  Dockerfile  alembic.ini  pyproject.toml
server/data/synthea/: fixture_all_types.json  fixture_diabetes_patient.json  fixture_routine_patient.json  fixture_shaq_variant.json
server/data/terminology/: icd10_snomed_crosswalk.csv  loinc_normalized.csv
server/medsync/: __init__.py  celery_app.py  config.py  main.py
server/medsync/api/routes/: bundles.py  patients.py
server/medsync/db/: base.py  session.py
server/medsync/db/migrations/: env.py
server/medsync/db/migrations/versions/: 0001_initial.py  0002_full_resources.py  0003_normalization.py  0004_dedup_enrich.py
server/medsync/models/: database.py  schemas.py
server/medsync/pipeline/: deduplicator.py  enricher.py  normalizer.py  parser.py  status.py  tasks.py
server/medsync/terminology/: crosswalk.py  units.py
server/scripts/: check_invariants.py  verify_all_types.py  verify_dedup.py  verify_enrich.py  verify_normalization.py  verify_spine.py
server/tests/: test_deduplicator.py  test_enricher.py  test_health.py  test_normalizer.py  test_parser.py
(+4 files in other folders)
