[project]
name = "medsync"
version = "0.1.0"
description = "FHIR-native clinical data pipeline with AI triage"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "celery[redis]>=5.4",
  "redis>=5.0",
  "fhir.resources>=7.1.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "recordlinkage>=0.16",
  "jellyfish>=1.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.5"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["medsync"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
